tree-sitter-hek/grammar.js
    source_file: ($) => repeat($._declaration),

    // Only `//` to end of line. There are no block comments (lex.rs `skip_trivia`).
    comment: (_) => token(seq('//', /.*/)),

    // ---------------------------------------------------------------- declarations

    _declaration: ($) =>
      choice(
        $.enum_declaration,
        $.record_declaration,
        $.const_declaration,
        $.secret_declaration,
        $.subject_declaration,
        $.function_declaration,
        $.event_declaration,
        $.refusal_declaration,
        $.command_declaration,
        $.guard_definition,
        $.projector_declaration,
        $.effect_declaration,
        $.test_declaration,
      ),

    enum_declaration: ($) =>
      seq(
        'enum',
        field('name', $._type_name),
        '{',
        commaSep1($.enum_variant),
        '}',
      ),

    enum_variant: ($) =>
      seq(optional($.annotation), field('name', $.identifier)),

    record_declaration: ($) =>
      seq(
        'record',
        field('name', $._type_name),
        '{',
        commaSep1($.record_field),
        '}',
      ),

    record_field: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        field('type', $.type),
        repeat($.annotation),
      ),

    // A const has no closing token; it ends where its value does (parse.rs `skip_const`).
    const_declaration: ($) =>
      seq(
        'const',
        field('name', $.identifier),
        ':',
        field('type', $.type),
        '=',
        field('value', $._expression),
      ),

    // Like a `const`, no closing token: it ends at its name, or at the `?` that makes it
    // optional. `secret` stays soft the way `latest` and `live` do (`delivery_keyword`
    // below): `word` is `identifier`, so keyword extraction claims it only where a rule
    // expects it, and a field or parameter of that name still lexes as an identifier.
    secret_declaration: ($) =>
      seq('secret', field('name', $.identifier), optional('?')),

    // A key namespace: its name, the type its ids are, and at most one parent. No
    // closing token either, like `const` and `secret`: it ends at the `)`, or at the
    // parent when it has one. Both `subject` and `under` stay soft for the reason
    // `secret` does, and `@subject(x)` is an `annotation` and never reaches here.
    function_declaration: ($) =>
      seq(
        'fn',
        field('name', $.identifier),
        field('parameters', $.parameters),
        // An event path is a result and never a parameter, which is a rule the parser
        // keeps for the reason above: the grammar cannot see which position it is in.
        optional(
          seq('->', field('return_type', choice($.type, $.event_path))),
        ),
        field('body', $.block),
      ),

    parameters: ($) => seq('(', commaSep($.parameter), ')'),

    parameter: ($) =>
      seq(field('name', $.identifier), ':', field('type', $.type)),

    event_declaration: ($) =>
      seq(
        'event',
        field('path', $.event_path),
        '{',
        commaSep($.event_field),
        '}',
      ),

    event_field: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        field('type', $.type),
        repeat($.annotation),
      ),

    command_declaration: ($) =>
      seq(
        'command',
        field('name', $._type_name),
        field('parameters', $.parameters),
        field('body', $.block),
      ),

    // A named proposition about the log. Parens declare and braces use, which is what
    // tells this apart from the `guard Name { .. }` inside a body.
    projector_declaration: ($) =>
      seq(
        'projector',
        field('name', $._type_name),
        '{',
        repeat(
          choice($.enum_declaration, $.entity_declaration, $.event_handler),
        ),
        '}',
      ),

    entity_declaration: ($) =>
      seq(
        'entity',
        field('name', $._type_name),
        '{',
        commaSep(choice($.index_clause, $.entity_field)),
        '}',
      ),

    // `index` stays a soft keyword, so it is read as a name plus a `(` rather than
    // reserved (parse.rs `at_index_clause`).
    entity_field: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        field('type', $.type),
        repeat($.annotation),
        optional(seq('=', field('default', $._expression))),
      ),

    // An effect body takes helpers beside its arms; a projector body does not
    // (parse.rs `effect_decl` against `projector_shell`).
    effect_declaration: ($) =>
      seq(
        'effect',
        field('name', $._type_name),
        '{',
        repeat(choice($.event_handler, $.function_declaration)),
        '}',
      ),

    // One shape for a projector handler and an effect arm; only an arm carries a
    // delivery modifier or lists more than one path, and a projector doing either would
    // be rejected by the checker, not here.
    event_handler: ($) =>
      seq(
        'on',
        optional(field('delivery', $.delivery_keyword)),
        commaSep1(field('path', $.event_path)),
        optional(seq('as', field('binding', $.identifier))),
        optional(field('destructure', $.destructure)),
        field('body', $.block),
      ),

    // `latest` and `live` stay soft, so they are still writable as names everywhere else
    // (parse.rs `delivery`): `word` is `identifier`, so keyword extraction claims them
    // only in this position. A node of its own rather than a bare anonymous token, so a
    // theme can colour it and so `hek fmt`, which walks named children only, can see it.
    delivery_keyword: (_) => choice('latest', 'live'),

    // An entry may carry `@key`, which marks an effect arm's partition key (rule 15).
    // Only the annotated form is wrapped, so a plain field stays the bare identifier
    // every query and every corpus tree already names.
    destructure: ($) => seq('{', commaSep1(choice($.identifier, $.keyed_field)), '}'),

    keyed_field: ($) => seq($.annotation, field('name', $.identifier)),

    // ----------------------------------------------------------------------- tests

    block: ($) => seq('{', repeat($._statement), '}'),

    _statement: ($) =>
      choice(
        $.guard_declaration,
        $.fold_declaration,
        $.let_statement,
        $.if_statement,
        $.for_statement,
        $.return_statement,
        $.outcome_expression,
        $.refusal_expression,
        $.fail_statement,
        $.emit_statement,
        $.put_statement,
        $.patch_statement,
        $.delete_statement,
        $.invoke_expression,
        $.expression_statement,
      ),

    // Two shapes, told apart by the token after `guard`: a path is raw slices added to
    // the boundary, a name is a declared guard. See `docs/guards.md`.
    guard_declaration: ($) =>
      choice(
        seq('guard', commaSep1($.slice_reference)),
        seq('guard', field('guard', $._type_name), $.field_initializer_list),
      ),

    fold_declaration: ($) =>
      seq(
        'fold',
        field('name', $.identifier),
        ':',
        field('type', $.type),
        '=',
        field('seed', $._expression),
        repeat($.fold_arm),
      ),

    fold_arm: ($) =>
      seq(
        'on',
        $.slice_reference,
        optional(field('destructure', $.destructure)),
        '=>',
        field('value', $._expression),
      ),

    // A slice always carries its parentheses, which is what tells a fold arm from a
    // handler when both begin `on @path` (parse.rs `slice_ref`).
    slice_reference: ($) =>
      seq(field('path', $.event_path), '(', commaSep($.filter), ')'),

    filter: ($) =>
      seq(
        field('field', $.identifier),
        optional(seq(':', field('value', $._expression))),
      ),

    let_statement: ($) =>
      seq('let', field('name', $.identifier), '=', field('value', $._expression)),

    // `else if` is a chain rather than a nesting (parse.rs statement, `Keyword::If`).
    if_statement: ($) =>
      seq(
        'if',
        field('condition', $._expression),
        field('consequence', $.block),
        optional(
          seq(
            'else',
            field('alternative', choice($.if_statement, $.block)),
          ),
        ),
      ),

    for_statement: ($) =>
      seq('for', $.iter_bindings, field('body', $.block)),

    iter_bindings: ($) =>
      seq(
        field('index', $.identifier),
        optional(seq(',', field('item', $.identifier))),
        'in',
        field('container', $._expression),
      ),

    // Bare, or a value inside a `fn`. An outcome is no longer one of them: saying the
    // answer ends the declaration, so `reject` and `invalid` are statements of their own.
    //
    // `fail` is named here because it is a soft name (rule 10) that this grammar also
    // spells as a keyword. After `return` it can only be a value: a `fail` *statement*
    // there would be unreachable. That is the same call `Parser::ends_return` makes, and
    // without it a local named `fail` is a file `hek fmt` cannot read.
    //
    // The two answers are named here for the opposite reason: `return reject X` is the
    // removed spelling, and this grammar is a superset on purpose. Without them the words
    // still parse, as a bare `return` followed by a statement, and `hek fmt` relays the
    // one line out into two before `hek check` ever gets to explain it. Keeping the old
    // shape whole is what lets the formatter hand a pre-migration file back unchanged.
    return_statement: ($) =>
      prec.right(
        seq(
          'return',
          optional(
            choice(
              $._expression,
              // The one place an event literal is written, which is the parser's rule
              // too: an event is not a value, so it is here rather than in `_primary`
              // and there is no `let x = @order.placed { .. }` for either to accept.
              $.event_literal,
              $.outcome_expression,
              $.refusal_expression,
              alias('fail', $.identifier),
            ),
          ),
        ),
      ),

    // `invalid <message>`, `fail <message>`. No parens, because parens are a call and a
    // call comes back; these are two of the three answers.
    //
    // The message is a string, and that is the language rather than a narrowing here:
    // `docs/refusals.md` has it as "a message and nothing else", and a value reaches one
    // through a hole. `src/parse.rs` took any expression with a `String` hint until
    // `Parser::answer_message` was written, which made this the one place the two
    // disagreed about what the language is, and the disagreement was silent in the
    // direction that matters: `invalid err` passed `hek check` while `hek fmt` declined
    // the whole file.
    //
    // It has to stay a string for the formatter's sake as well. Were the message
    // `$._expression`, the parens of a removed `invalid("x")` would read as a grouping
    // and `hek fmt` would rewrite the file to `invalid ("x")`: output of its own that
    // `hek check` rejects, which is the one thing a formatter must never produce. As a
    // string it matches no rule at all, so `fmt` leaves the file for `check` to explain.
    outcome_expression: ($) =>
      prec.right(seq('invalid', field('message', choice($.string, $.raw_string)))),

    fail_statement: ($) =>
      prec.right(seq('fail', field('message', choice($.string, $.raw_string)))),

    // `reject Name`, or `reject Name { field: value }`.
    // `prec.right` because a `{` after the name is always the fields: unlike a record
    // literal, which loses to a block in a header (`no_record_literal` in parse.rs),
    // a refusal is never a header's condition, so there is no block for it to lose to.
    refusal_expression: ($) =>
      prec.right(
        seq(
          'reject',
          field('name', $._type_name),
          optional(field('fields', $.field_initializer_list)),
        ),
      ),

    emit_statement: ($) =>
      seq('emit', field('path', $.event_path), $.field_initializer_list),

    // `@order.placed { .. }` after a `return`: the same shape an `emit` writes, with
    // the keyword being the whole of what tells them apart.
    expression_statement: ($) => choice($.call_expression, $.method_call),

    // ----------------------------------------------------------------------- types

    type: ($) =>
      seq(
        choice(
          $.primitive_type,
          $.scaled_type,
          $.list_type,
          $.map_type,
          $._type_name,
        ),
        optional('?'),
      ),

    primitive_type: (_) =>
      choice('Bool', 'Int', 'String', 'Uuid', 'Timestamp', 'Json', 'Response'),

    scaled_type: ($) =>
      seq(choice('Decimal', 'Money'), '(', $.integer_literal, ')'),

    list_type: ($) => seq('List', '(', $.type, ')'),

    map_type: ($) =>
      seq('Map', '(', field('key', $.type), ',', field('value', $.type), ')'),

    // A single aliased node, so a query on it has no nested `(identifier)` under it
    // competing for the same range.
    _type_name: ($) => alias($.identifier, $.type_identifier),

    // ----------------------------------------------------------------- expressions

    _expression: ($) =>
      choice($._primary, $.unary_expression, $.binary_expression),

    binary_expression: ($) =>
      choice(
        ...[
          ['||', PREC.or],
          ['&&', PREC.and],
          ['==', PREC.cmp],
          ['!=', PREC.cmp],
          ['<=', PREC.cmp],
          ['>=', PREC.cmp],
          ['<', PREC.cmp],
          ['>', PREC.cmp],
          ['+', PREC.add],
          ['-', PREC.add],
          ['*', PREC.mul],
          ['/', PREC.mul],
          ['%', PREC.mul],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
      ),

    call_expression: ($) =>
      prec(
        PREC.call,
        seq(field('function', $.identifier), field('arguments', $.arguments)),
      ),

    method_call: ($) =>
      prec(
        PREC.call,
        seq(
          field('receiver', $._expression),
          '.',
          field('method', $.identifier),
          field('arguments', $.arguments),
        ),
      ),

    // Parenless, so a field rather than a method. Only a `Response`, a record and the
    // `as` envelope have any (parse.rs `postfix_expr`).
    field_expression: ($) =>
      prec(
        PREC.postfix,
        seq(field('receiver', $._expression), '.', field('field', $.identifier)),
      ),

    // `headers = ...` is the language's only named argument (parse.rs `http_call`).
    arguments: ($) =>
      seq('(', commaSep(choice($.named_argument, $._expression)), ')'),

    named_argument: ($) =>
      seq(field('name', $.identifier), '=', field('value', $._expression)),

    // The block wins wherever an `if` or `for` header could also read `Name {` as a
    // literal, which is what `no_record_literal` does in the parser.
    record_literal: ($) =>
      prec.dynamic(
        -1,
        seq(field('name', $._type_name), $.field_initializer_list),
      ),

    invoke_expression: ($) =>
      seq('invoke', field('command', $.identifier), $.field_initializer_list),

    // `{ field: value, shorthand }`, shared by emit, put, patch, record literals,
    // invoke, given, run and every expectation that names fields.
    field_initializer_list: ($) =>
      seq('{', commaSep($.field_initializer), '}'),

    field_initializer: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq(':', field('value', $._expression))),
      ),

    // An object key is a quoted string (parse.rs `object_literal`).
    object_literal: ($) => seq('{', commaSep($.object_entry), '}'),
