tree-sitter-hek/test/corpus/command.txt
================================================================================
guard, folds and a leading let
================================================================================

command PlaceOrder(order_id: Uuid, customer_id: Int, notes: String?) {
  guard @order.placed(order_id), @order.cancelled(order_id)

  fold email_taken: Bool = false
    on @order.placed(email) => true

  fold lifetime_spend: Money(2) = 0
    on @order.placed(customer_id) { total } => lifetime_spend + total
    on @order.cancelled(customer_id) { refund } => lifetime_spend - refund

  let customer = customer_id
  fold blocked: Bool = false
    on @customer.blocked(customer_id: customer) => true

  if blocked {
    reject CustomerBlocked
  } else if email_taken {
    invalid "that email has already placed an order"
  } else {
    return
  }
}

--------------------------------------------------------------------------------

(source_file
  (command_declaration
    (type_identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (primitive_type)))
      (parameter
        (identifier)
        (type
          (primitive_type)))
      (parameter
        (identifier)
        (type
          (primitive_type))))
    (block
      (guard_declaration
        (slice_reference
          (event_path)
          (filter
            (identifier)))
        (slice_reference
          (event_path)
          (filter
            (identifier))))
      (fold_declaration
        (identifier)
        (type
          (primitive_type))
        (boolean_literal)
        (fold_arm
          (slice_reference
            (event_path)
            (filter
              (identifier)))
          (boolean_literal)))
      (fold_declaration
        (identifier)
        (type
          (scaled_type
            (integer_literal)))
        (integer_literal)
        (fold_arm
          (slice_reference
            (event_path)
            (filter
              (identifier)))
          (destructure
            (identifier))
          (binary_expression
            (identifier)
            (identifier)))
        (fold_arm
          (slice_reference
            (event_path)
            (filter
              (identifier)))
          (destructure
            (identifier))
          (binary_expression
            (identifier)
            (identifier))))
      (let_statement
        (identifier)
        (identifier))
      (fold_declaration
        (identifier)
        (type
          (primitive_type))
        (boolean_literal)
        (fold_arm
          (slice_reference
            (event_path)
            (filter
              (identifier)
              (identifier)))
          (boolean_literal)))
      (if_statement
        (identifier)
        (block
          (refusal_expression
            (type_identifier)))
        (if_statement
          (identifier)
          (block
            (outcome_expression
              (string
                (string_content))))
          (block
            (return_statement)))))))

================================================================================
for over a map, emit with shorthand fields
================================================================================

command ListItem(item_id: Uuid, tier: Tier) {
  for other_id, other in items {
    if other_id != item_id && other.sku == wanted {
      reject SkuTaken { sku }
    }
  }

  emit @item.listed {
    item_id,
    item: Item { sku: wanted, price, tags },
    tier,
  }
}

--------------------------------------------------------------------------------

(source_file
  (command_declaration
    (type_identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (primitive_type)))
      (parameter
        (identifier)
        (type
          (type_identifier))))
    (block
      (for_statement
        (iter_bindings
          (identifier)
          (identifier)
          (identifier))
        (block
          (if_statement
            (binary_expression
              (binary_expression
                (identifier)
                (identifier))
              (binary_expression
                (field_expression
                  (identifier)
                  (identifier))
                (identifier)))
            (block
              (refusal_expression
                (type_identifier)
                (field_initializer_list
                  (field_initializer
                    (identifier))))))))
      (emit_statement
        (event_path)
        (field_initializer_list
          (field_initializer
            (identifier))
          (field_initializer
            (identifier)
            (record_literal
              (type_identifier)
              (field_initializer_list
                (field_initializer
                  (identifier)
                  (identifier))
                (field_initializer
                  (identifier))
                (field_initializer
                  (identifier)))))
          (field_initializer
            (identifier)))))))

================================================================================
declarations interleave with statements, and each run is one read
================================================================================

command ListItem(item_id: Uuid, sku: String) {
  let trimmed = sku.trim()
  if trimmed.is_empty() {
    invalid "a sku is required"
  }

  guard SkuIsFree { sku: trimmed }

  fold listed: Bool = false
    on @item.listed(item_id) => true

  emit @item.listed { item_id, sku: trimmed }
}

--------------------------------------------------------------------------------

(source_file
  (command_declaration
    name: (type_identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (type
          (primitive_type)))
      (parameter
        name: (identifier)
        type: (type
          (primitive_type))))
    body: (block
      (let_statement
        name: (identifier)
        value: (method_call
          receiver: (identifier)
          method: (identifier)
          arguments: (arguments)))
      (if_statement
        condition: (method_call
          receiver: (identifier)
          method: (identifier)
          arguments: (arguments))
        consequence: (block
          (outcome_expression
            message: (string
              (string_content)))))
      (guard_declaration
        guard: (type_identifier)
        (field_initializer_list
          (field_initializer
            name: (identifier)
            value: (identifier))))
      (fold_declaration
        name: (identifier)
        type: (type
          (primitive_type))
        seed: (boolean_literal)
        (fold_arm
          (slice_reference
            path: (event_path)
            (filter
              field: (identifier)))
          value: (boolean_literal)))
      (emit_statement
        path: (event_path)
        (field_initializer_list
          (field_initializer
            name: (identifier))
          (field_initializer
            name: (identifier)
            value: (identifier)))))))
