tree-sitter-hek/test/corpus/effect.txt
================================================================================
an arm on several paths, with a fold and a headers argument
================================================================================

effect AuditCatalog {
  on @item.listed,
     @item.delisted,
     @item.flagged as e { item_id, @key seller_id } {

    fold listed: Int = 0
      on @item.listed(seller_id) => listed + 1

    let response = http.post(
      "https://audit.example/catalog",
      { "seller": seller_id, "listed": listed },
      headers = { "Idempotency-Key": "{audit_id(seller_id, e.position)}" },
    )

    if response.status >= 400 {
      fail "audit rejected"
    }

    log("seller {seller_id} now lists {listed}")

    invoke RecordNotified {
      order_id: e.order_id,
      notification_id: Uuid.derive(e.id, "confirmation"),
    }
  }
}

--------------------------------------------------------------------------------

(source_file
  (effect_declaration
    (type_identifier)
    (event_handler
      (event_path)
      (event_path)
      (event_path)
      (identifier)
      (destructure
        (identifier)
        (keyed_field
          (annotation
            (annotation_name))
          (identifier)))
      (block
        (fold_declaration
          (identifier)
          (type
            (primitive_type))
          (integer_literal)
          (fold_arm
            (slice_reference
              (event_path)
              (filter
                (identifier)))
            (binary_expression
              (identifier)
              (integer_literal))))
        (let_statement
          (identifier)
          (method_call
            (identifier)
            (identifier)
            (arguments
              (string
                (string_content))
              (object_literal
                (object_entry
                  (string
                    (string_content))
                  (identifier))
                (object_entry
                  (string
                    (string_content))
                  (identifier)))
              (named_argument
                (identifier)
                (object_literal
                  (object_entry
                    (string
                      (string_content))
                    (string
                      (interpolation
                        (call_expression
                          (identifier)
                          (arguments
                            (identifier)
                            (field_expression
                              (identifier)
                              (identifier))))))))))))
        (if_statement
          (binary_expression
            (field_expression
              (identifier)
              (identifier))
            (integer_literal))
          (block
            (fail_statement
              (string
                (string_content)))))
        (expression_statement
          (call_expression
            (identifier)
            (arguments
              (string
                (string_content)
                (interpolation
                  (identifier))
                (string_content)
                (interpolation
                  (identifier))))))
        (invoke_expression
          (identifier)
          (field_initializer_list
            (field_initializer
              (identifier)
              (field_expression
                (identifier)
                (identifier)))
            (field_initializer
              (identifier)
              (method_call
                (identifier)
                (identifier)
                (arguments
                  (field_expression
                    (identifier)
                    (identifier))
                  (string
                    (string_content)))))))))))

================================================================================
reveal, now and erase
================================================================================

effect SyncShop {
  on @shop.sync.requested as e { shop_id } {
    fold token: String? = none
      on @shop.connected(shop_id) { access_token } => access_token

    let secret = reveal(token)
    let at = now()
    if secret.is_none() {
      erase(e.shop_id)
      return
    }
  }
}

--------------------------------------------------------------------------------

(source_file
  (effect_declaration
    (type_identifier)
    (event_handler
      (event_path)
      (identifier)
      (destructure
        (identifier))
      (block
        (fold_declaration
          (identifier)
          (type
            (primitive_type))
          (none_literal)
          (fold_arm
            (slice_reference
              (event_path)
              (filter
                (identifier)))
            (destructure
              (identifier))
            (identifier)))
        (let_statement
          (identifier)
          (call_expression
            (identifier)
            (arguments
              (identifier))))
        (let_statement
          (identifier)
          (call_expression
            (identifier)
            (arguments)))
        (if_statement
          (method_call
            (identifier)
            (identifier)
            (arguments))
          (block
            (expression_statement
              (call_expression
                (identifier)
                (arguments
                  (field_expression
                    (identifier)
                    (identifier)))))
            (return_statement)))))))

================================================================================
a fn scoped to the effect that uses it
================================================================================

effect RecordWarrantySales {
  fn lookup_plan(plans: Map(Uuid, SalePlan), sku: String) -> SalePlan? {
    for plan_id, plan in plans {
      if plan.sku == sku {
        return plan
      }
    }
    return none
  }

  on @shopify.orders_paid.received as e {
    shop_id, order_id, order_name
  } {
    log("order {order_name} for shop {shop_id}")
  }
}

--------------------------------------------------------------------------------

(source_file
  (effect_declaration
    (type_identifier)
    (function_declaration
      (identifier)
      (parameters
        (parameter
          (identifier)
          (type
            (map_type
              (type
                (primitive_type))
              (type
                (type_identifier)))))
        (parameter
          (identifier)
          (type
            (primitive_type))))
      (type
        (type_identifier))
      (block
        (for_statement
          (iter_bindings
            (identifier)
            (identifier)
            (identifier))
          (block
            (if_statement
              (binary_expression
                (field_expression
                  (identifier)
                  (identifier))
                (identifier))
              (block
                (return_statement
                  (identifier))))))
        (return_statement
          (none_literal))))
    (event_handler
      (event_path)
      (identifier)
      (destructure
        (identifier)
        (identifier)
        (identifier))
      (block
        (expression_statement
          (call_expression
            (identifier)
            (arguments
              (string
                (string_content)
                (interpolation
                  (identifier))
                (string_content)
                (interpolation
                  (identifier))))))))))

================================================================================
an effect-local fn that declares no result
================================================================================

effect SyncShop {
  fn sync(shop_id: Int, domain: String) {
    let response = http.post("https://{domain}/sync", { "shop": shop_id })
    if response.status >= 400 {
      fail "sync failed"
    }
  }

  on @shop.connected as e { shop_id, shop_domain } {
    sync(shop_id, shop_domain)
  }
}

--------------------------------------------------------------------------------

(source_file
  (effect_declaration
    (type_identifier)
    (function_declaration
      (identifier)
      (parameters
        (parameter
          (identifier)
          (type
            (primitive_type)))
        (parameter
          (identifier)
          (type
            (primitive_type))))
      (block
        (let_statement
          (identifier)
          (method_call
            (identifier)
            (identifier)
            (arguments
              (string
                (string_content)
                (interpolation
                  (identifier))
                (string_content))
              (object_literal
                (object_entry
                  (string
                    (string_content))
                  (identifier))))))
        (if_statement
          (binary_expression
            (field_expression
              (identifier)
              (identifier))
            (integer_literal))
          (block
            (fail_statement
              (string
                (string_content)))))))
    (event_handler
      (event_path)
      (identifier)
      (destructure
        (identifier)
        (identifier))
      (block
        (expression_statement
          (call_expression
            (identifier)
            (arguments
              (identifier)
              (identifier))))))))

================================================================================
delivery modifiers and a composite key
================================================================================

effect SyncShopPlans {
  on latest @shop.reconnected,
     @warranty.plan.updated as e { @key shop_id, @key plan_id, title } {
    log("{shop_id}")
  }

  on live @shop.connected { @key shop_id } {
    log("new")
  }
}

--------------------------------------------------------------------------------

(source_file
  (effect_declaration
    (type_identifier)
    (event_handler
      (delivery_keyword)
      (event_path)
      (event_path)
      (identifier)
      (destructure
        (keyed_field
          (annotation
            (annotation_name))
          (identifier))
        (keyed_field
          (annotation
            (annotation_name))
          (identifier))
        (identifier))
      (block
        (expression_statement
          (call_expression
            (identifier)
            (arguments
              (string
                (interpolation
                  (identifier))))))))
    (event_handler
      (delivery_keyword)
      (event_path)
      (destructure
        (keyed_field
          (annotation
            (annotation_name))
          (identifier)))
      (block
        (expression_statement
          (call_expression
            (identifier)
            (arguments
              (string
                (string_content)))))))))
